--- a/.github/workflows/CI-POST_REST.yml
+++ b/.github/workflows/CI-POST_REST.yml
@@ -23,7 +23,11 @@ jobs:
         uses: Enovade/POST-REST@v1.0.5
         with:
           url: 'http://202.165.24.140:1337/moes?jenis=berita'
-
+          
+      # Runs a single command using the runners shell
+      - name: Save result to file
+        run: echo "------------------" >> mydate.txt
+        
       # Runs a single command using the runners shell
       - name: Run a one-line script
         run: echo Salam Sejahtera!
