--- a/.github/workflows/CI-POST_REST.yml
+++ b/.github/workflows/CI-POST_REST.yml
@@ -20,13 +20,15 @@ jobs:
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - name: Send HTTP POST REST Request
+        id: postid
         uses: Enovade/POST-REST@v1.0.5
         with:
           url: 'http://202.165.24.140:1337/moes?jenis=berita'
           
       # Runs a single command using the runners shell
-      - name: Save result to file
-        run: echo ${{ steps.build.outputs.result }} >> greet.txt
+      - name: Save result to file 
+        run: echo ${{ steps.postid.outputs.result }}
+     #   run: echo ${{ steps.build.outputs.result }} >> greet.txt
         
       - name: Upload artifact
         uses: actions/upload-artifact@v3
