--- a/.github/workflows/CI-POST_REST.yml
+++ b/.github/workflows/CI-POST_REST.yml
@@ -24,14 +24,19 @@ jobs:
         uses: Enovade/POST-REST@v1.0.5
         with:
           url: 'http://202.165.24.140:1337/moes?jenis=berita'
+      # Runs a single command using the runners shell
+      - name: Save result to file 
+        run: echo "hello world!!" >> greet.txt
+      #  run: echo ${{ steps.postid.outputs.result }}
   
   artifact:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
+    needs: build
     steps:
       # Runs a single command using the runners shell
-      - name: Save result to file 
-        run: echo "hello world" >> greet.txt
+      #- name: Save result to file 
+      #  run: echo "hello world" >> greet.txt
       #  run: echo ${{ steps.postid.outputs.result }}
         
       - name: Upload artifact
