--- a/.github/workflows/CI-POST_REST.yml
+++ b/.github/workflows/CI-POST_REST.yml
@@ -15,7 +15,8 @@ jobs:
   build:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
-
+    outputs:
+      result-json: ${{ steps.postid.outputs.result }}
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
@@ -33,7 +34,6 @@ jobs:
       # Runs a single command using the runners shell
       - name: Save result to file 
         run: echo "hello world" >> greet.txt
-      #  run: echo ${{ steps.postid.outputs.result }}
         
       - name: Upload artifact
         uses: actions/upload-artifact@v3
@@ -43,4 +43,4 @@ jobs:
     
       # Runs a single command using the runners shell
       - name: Run a one-line script
-        run: echo "result- ${{needs.build.outputs.result}}"
+        run: echo "result- ${{needs.build.outputs.result-json}}"
