--- a/.github/workflows/CI-POST_REST.yml
+++ b/.github/workflows/CI-POST_REST.yml
@@ -16,7 +16,7 @@ jobs:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
     outputs:
-      result-json: ${{ steps.postid.outputs.result }}
+      result-json: ${{ steps.postid.outputs.build }}
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
@@ -43,4 +43,4 @@ jobs:
     
       # Runs a single command using the runners shell
       - name: Run a one-line script
-        run: echo "result- ${{needs.build.outputs.result-json}}"
+        run: echo "result- ${{ needs.build.outputs.result-json }}"
