--- a/.github/workflows/CI-POST_REST.yml
+++ b/.github/workflows/CI-POST_REST.yml
@@ -32,7 +32,7 @@ jobs:
       - name: Save result to variable 
         run: | 
           jsonResult = '${{(steps.postid.outputs.jawapan)}}'
-          echo $jsonResult
+          echo '$jsonResult'
         
       - name: Upload artifact
         uses: actions/upload-artifact@v3
