--- a/.github/workflows/CI-POST_REST.yml
+++ b/.github/workflows/CI-POST_REST.yml
@@ -26,13 +26,8 @@ jobs:
         with:
           url: 'http://202.165.24.140:1337/moes?jenis=berita'
           
-      #- name: Save result to file 
-      #  run: echo ${{(steps.postid.outputs.jawapan)}} > jawapan.json
-      
-      - name: Save result to variable 
-        run: | 
-          jsonResult = '${{(steps.postid.outputs.jawapan)}}'
-          echo '$jsonResult'
+      - name: Save result to file 
+        run: cat ${{(steps.postid.outputs.jawapan)}} > jawapan.json
         
       - name: Upload artifact
         uses: actions/upload-artifact@v3
