--- a/.github/workflows/CI-POST_REST.yml
+++ b/.github/workflows/CI-POST_REST.yml
@@ -12,7 +12,7 @@ on:
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
   # This workflow contains a single job called "build"
-  build:
+  scan:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
     outputs:
@@ -34,22 +34,19 @@ jobs:
         with:
           path: jawapan.json
           if-no-files-found: error
-          
-      #- name: display result 2 
-      #  run: echo ${{ steps.postid.outputs.jawapan }}
   
   artifact:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
-    needs: build
+    needs: scan
     steps:
       # Runs a single command using the runners shell
       - name: Save result to file 
-        run: echo "hello world" >> greet.txt
+        run: echo ${{toJson(needs.scan.outputs.result-json)}} > greet.json
         
       - name: Upload artifact
         uses: actions/upload-artifact@v3
         with:
-          path: greet.txt
+          path: greet.json
           if-no-files-found: error
     
