--- a/.github/workflows/splask-assessment.yml
+++ b/.github/workflows/splask-assessment.yml
@@ -12,20 +12,25 @@ on:
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
   # This workflow contains a single job called "build"
-  build:
+  scan-website:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
 
-    # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-      - name: Send HTTP POST REST Request
-        uses: Enovade/splask@v1.0.0
+      - name: Send request to scan website
+        id: scan-step
+        uses: Enovade/splask@v1.0.1
         with:
           splaskurl: 'https://splaskprototaip.cloud-connect.asia/app/getsplask'
           url: 'https://www.mampu.gov.my/'
           scope: 'all'
-
-      # Runs a single command using the runners shell
-      - name: Run a one-line script
-        run: echo Salam Sejahtera!
+          
+      - name: Save result to file 
+        run: echo ${{toJson(steps.scan-step.outputs.jawapan)}} > jawapan.json
+        
+      - name: Upload artifact
+        uses: actions/upload-artifact@v3
+        with:
+          path: jawapan.json
+          if-no-files-found: error
