--- a/.github/workflows/splask-assessment.yml
+++ b/.github/workflows/splask-assessment.yml
@@ -14,18 +14,17 @@ jobs:
   initialize:
     runs-on: ubuntu-latest
     steps:
-      # Runs a single command using the runners shell
       - name: Run a one-line script
         id: Initialize-step
-        with: 
+        env: 
           access-token: ${{secrets.ENOVADE_TOKEN}}
+        run: echo "Initialize SPLaSK service!"
+          
         
   scan-website:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
-
     steps:
-      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - name: Send request to scan website
         id: scan-step
         uses: Enovade/splask@v1.0.1
