--- a/.github/workflows/splask-assessment.yml
+++ b/.github/workflows/splask-assessment.yml
@@ -19,11 +19,10 @@ jobs:
         env: 
           access-token: ${{secrets.ENOVADE_TOKEN}}
         run: echo "Initialize SPLaSK service!"
-          
         
   scan-website:
-    # The type of runner that the job will run on
     runs-on: ubuntu-latest
+    needs: initialize
     steps:
       - name: Send request to scan website
         id: scan-step
@@ -41,3 +40,10 @@ jobs:
         with:
           path: jawapan.json
           if-no-files-found: error
+          
+  artifact:
+      runs-on: ubuntu-latest
+      needs: scan-website
+      steps:
+        - name: Run a one-line script
+          run: echo "Artifact successfully created!"
