--- a/.github/workflows/splask-assessment.yml
+++ b/.github/workflows/splask-assessment.yml
@@ -42,7 +42,7 @@ jobs:
           json: ${{steps.scan-step.outputs.jawapan}}
       
       - name: Save result to html 
-        run: echo "EOF" ${{steps.json-html.outputs.htmloutput}} "EOF" >> htmloutput.html
+        run: echo "${{steps.json-html.outputs.htmloutput}}" >> htmloutput.html
           
         
       - name: Upload artifact
